Stylesheet/emote/tag updates 2013-10-07

--- a/source-css/batquisition.css
+++ b/source-css/batquisition.css
@@ -33,5 +33,27 @@ a[href|="/blossomhappy"] {width:72px; height:71px; background-position: -369px -
 a[href|="/heartbeatstare"] {width:70px; height:68px; background-position: -369px -747px}
 a[href|="/nightlightkillyourfamily"] {width:108px; height:84px; background-position: -369px -817px}
 
+a[href|='/echostar'], a[href|='/nightfrosthappy'], a[href|='/echoface'], a[href|='/blossomlikesit'], a[href|='/blossomsquirrel'], a[href|='/nightlightpounce'], a[href|='/thisisbat'], a[href|='/nightlightsocool'], a[href|='/echolikesit'], a[href|='/topbat2'], a[href|='/derpybat'], a[href|='/echomoogle'], a[href|='/echoonthebed']{
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%batsheettwotwo%%) }
+
+a[href|="/echostar"] {width:145px; height:150px; background-position: -117px -0px}
+
+a[href|="/nightfrosthappy"] {width:155px; height:145px; background-position: -270px -0px}
+a[href|="/echoface"] {width:145px; height:140px; background-position: -175px -150px}
+a[href|="/blossomlikesit"] {width:170px; height:155px; background-position: -320px -150px}
+a[href|="/blossomsquirrel"] {width:170px; height:162px; background-position: -0px -305px}
+a[href|="/nightlightpounce"] {width:160px; height:150px; background-position: -173px -315px}
+a[href|="/thisisbat"] {width:145px; height:155px; background-position: -350px -315px}
+a[href|="/nightlightsocool"] {width:146px; height:160px; background-position: -0px -465px}
+a[href|="/echolikesit"] {width:146px; height:162px; background-position: -145px -465px}
+a[href|="/topbat2"] {width:158px; height:170px; background-position: -330px -465px}
+a[href|="/derpybat"] {width:180px; height:142px; background-position: -0px -635px}
+a[href|="/echomoogle"] {width:126px; height:172px; background-position: -180px -635px}
+a[href|="/echoonthebed"] {width:190px; height:155px; background-position: -310px -645px}
+
 /********* End of Emotes **********/
 
