--- a/source-css/comeinside.css
+++ b/source-css/comeinside.css
@@ -185,7 +185,7 @@ a[href|='/teeth'] {width:118px; height:135px; background-position: -369px -2px}
 a[href|='/twiumm'] {width:110px; height:120px; background-position: -2px -2px}
 
 
-a[href|='/gotobread'], a[href|='/haveacookie'], a[href|='/horseonfire'], a[href|='/mylifeisinshambles'], a[href|='/ohgosh'], a[href|='/ppshiggy'], a[href|='/ppsmirk'], a[href|='/scootafied'], a[href|='/scootafried'], a[href|='/sleepymac'], a[href|='/stitchbystitch'], a[href|='/surstageleft'], a[href|='/tavisalute'], a[href|='/thebaz'], a[href|='/twiface'], a[href|='/twilongdidntread'] {
+a[href|='/gotobread'], a[href|='/haveacookie'], a[href|='/horseonfire'], a[href|='/mylifeisinshambles'], a[href|='/ohgosh'], a[href|='/ppshiggy'], a[href|='/ppsmirk'], a[href|='/scootafied'], a[href|='/scootafried'], a[href|='/sleepymac'], a[href|='/stitchbystitch'], a[href|='/surstageleft'], a[href|='/tavisalute'], a[href|='/thebaz'], a[href|='/twiface'], a[href|='/twilongdidntread'], a[href|='/bjshrug'], a[href|='/rbjshrug'] {
     display: block;
     clear: none;
     float: left;
@@ -208,8 +208,8 @@ a[href|='/tavisalute'] {width:155px; height:150px; background-position: -194px -
 a[href|='/thebaz'] {width:114px; height:150px; background-position: -351px -251px}
 a[href|='/twiface'] {width:151px; height:150px; background-position: -2px -403px}
 a[href|='/twilongdidntread'] {width:176px; height:200px; background-position: -2px -732px}
-
-
+a[href|='/bjshrug'] {width:73px; height:70px; background-position: -206px -811px}
+a[href|='/rbjshrug'] {width:73px; height:70px; background-position: -206px -883px}
 
 a[href|="/iamafillyandwhatisthis"]
 {display:block;clear:none;float:left;width:65px;height:100px;background-image:url(%%iamafilly%%)!important}
@@ -223,7 +223,7 @@ a[href|="/iamafillyandwhatisthis"]
 
 
 
-
+a[href|='/hehehehe'] { width:500px; height:250px; background-image: url(%%hehehehe%%);  display: block; clear: none; float: left;}
 
 
 a[href|='/partydance'] { width:130px; height:150px; background-image: url(%%partydance%%);  display: block; clear: none; float: left;}
@@ -283,7 +283,7 @@ div.titlebox span.number:after {
     }
 div.titlebox .users-online span.number:after
 {
-    content:" Fancy-Pants Dancers";
+    content:" Fambees";
 }
 
 /* Hides downvote arrow -circle jerks ahoy!*/
