--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -399,13 +399,13 @@ a[href|="/vrcrazy"]{background-position: -240px -750px; width: 70px; height: 70p
 a[href|="/lplie"]{background-position: -240px -870px; width: 100px; height: 100px; }
 
 
-a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"], a[href|="/glimmerplotting"], a[href|="/glimmersqueeze"], a[href|="/glimmerwink"], a[href|="/bjfilly"], a[href|="/gofish"], a[href|="/bjsalute"], a[href|="/bjwat"]
+a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"], a[href|="/glimmerplotting"], a[href|="/glimmersqueeze"], a[href|="/glimmerwink"], a[href|="/bjfilly"], a[href|="/gofish"], a[href|="/bjsalute"], a[href|="/bjwat"], a[href|="/glorystretch"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em6-v05%%);
+background-image: url(%%foe-em6-v9%%);
 }
 a[href|="/bjdrunk"]{background-position: 0 0; width: 119px; height: 77px; }
 a[href|="/bjpounce"]{ background-position: 0 -127px; width: 150px; height: 79px; }
@@ -424,6 +424,7 @@ a[href|="/glimmerwink"]{ background-position: -200px 0; width: 55px; height: 100
 a[href|="/bjfilly"], a[href|="/gofish"]{ background-position: -200px -150px; width: 113px; height: 130px; }
 a[href|="/bjsalute"]{ background-position: -200px -330px; width: 136px; height: 100px }
 a[href|="/bjwat"]{ background-position: -200px -480px; width: 78px; height: 100px; }
+a[href|="/glorystretch"]{ background-position: -200px -630px; width: 163px; height: 100px; }
 
 
 
