--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -551,6 +551,15 @@ a[href|="/ograrity"] {
     background-image: url(%%ograrity%%) !important
     }
 
+a[href|="/rdhairdo"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 144px;
+    height: 150px;
+    background-image: url(%%rdhairdo%%) !important
+    }
+
 a[href|="/twispecial"] {
     display: block;
     clear: none;
@@ -812,6 +821,26 @@ a[href|="/rosecry"] {
     height: 175px;
     background-image: url(%%emotesquare%%) !important;
     background-position: 0px 0px;
+    }
+
+a[href|="/apple"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 50px;
+    height: 50px;
+    background-image: url(%%emotesquare%%) !important;
+    background-position: -350px -250px;
+    }
+
+a[href|="/cuddlerape"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 175px;
+    height: 175px;
+    background-image: url(%%emotesquare%%) !important;
+    background-position: -175px -0px;
     }
 
 /* ------MACROS------- */
