--- a/source-css/mylittlenosleep.css
+++ b/source-css/mylittlenosleep.css
@@ -273,7 +273,7 @@ color: white !important;
 .sidebox.gold .morelink {
  border:none;
  background-color:transparent;
- background-image:url(/static/goldmorelink.png);  
+ background-image:url(%%goldmorelink%%);  
  background-position:0 0;
  background-repeat:no-repeat;
  height:31px;
