--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -8,6 +8,14 @@ hr {
     border-top: none
 }
 
+/* Pretzels */
+
+.comment {
+    background-image: url(%%pretzelad%%);
+    background-repeat:no-repeat;
+    background-position:right top;
+}
+
 /* Nice looking H4s. SHUT UP DAVID. */
 
 .link .usertext .md {
