--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -598,3 +598,12 @@ a[href|="/awakedash"] {
   height:200px;
 }
 
+a[href|="/huggingcloudchaser"] {
+  background-image: url(%%huggingcloudchaser%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:150px;
+  height:114px;
+}
+
