--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -976,3 +976,351 @@ a[href|="/taviscratch"] {
  background-image: url(%%taviclones%%);
  background-position: -0px -1200px;  
 } 
+
+a[href|="/twintertaviland"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 211px;
+ height: 300px;
+ background-image: url(%%twintertaviland%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/taviwtf"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 143px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/taviwhy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/tavicool"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 135px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/taviscratchnuzzle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 236px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/tavitrixiekiss"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 240px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavilyrakiss"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/blushtavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 111px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/taviscratchhuggle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 146px;
+ height: 150px;
+ background-image: url(%%spritesheet4%%);
+ background-position: -0px -1200px;  
+} 
+
+a[href|="/taviscratchsqueeze"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 141px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/taviscratchhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 125px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/taviverydrunk"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 120px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/tavirage"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 111px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/tavinaww"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 167px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/tavihello"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 72px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavifacehoof"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 159px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/tavidrool"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 120px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/tavicrazed"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 129px;
+ height: 150px;
+ background-image: url(%%spritesheet5%%);
+ background-position: -0px -1200px;  
+} 
+
+a[href|="/surpridashblush"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 208px;
+ height: 300px;
+ background-image: url(%%surpridashblush%%); 
+} 
+
+a[href|="/tavinaptime"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 132px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/taviblushcute"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 68px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/tavidepressed"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/tavimiserable"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 117px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/imonfire"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 189px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/taviannoyed"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 156px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavidissapointed"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 122px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/taviohmy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 147px;
+ height: 150px;
+ background-image: url(%%spritesheet6%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/kwisatzhaderach"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 335px;
+ height: 300px;
+ background-image: url(%%kwisatzhaderach%%);
+} 
+
+a[href|="/tavibestpony"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 116px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/tavihide"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/tavijimjams"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 164px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/tavimorning"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 148px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/tavipanic"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 135px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/tavisnoozing"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 266px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavitea"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 143px;
+ height: 150px;
+ background-image: url(%%spritesheet7%%);
+ background-position: -0px -900px;  
+} 
