--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -92,7 +92,7 @@ Height: 155px;
 background-image: url(%%trufflepaper%%) !important
 }
 
-a[href="/sbtarget"],a[href="/sweetiebottarget"],a[href="/sbmissile"],a[href|="/fearme"] {
+a[href="/sbtarget"],a[href="/sweetiebottarget"],a[href="/sbmissile"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
